@@ -172,7 +172,7 @@ if ($template->save()) {
     $resource = $this->xpdo->newObject('modResource');
     $resource->fromArray(array(
         'pagetitle' => $this->lexicon('home'),
-        'alias' => '',
+        'alias' => 'index',
         'contentType' => 'text/html',
         'type' => 'document',
         'published' => true,
