@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#5315] Use automatic_alias behavior when updating site_start regardless of setting
 - [#5757] Allow text in grids to be selectable
 - [#5879] Ensure html tags are stripped on titles in the Resource edit view
 - [#5855] Ensure if no parents are specified, resourcelist input option works as expected
